fixed some layout issues on small devices

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -6,7 +6,6 @@
     gap: 135px;
     max-width: fit-content;
     margin: auto;
-    margin-bottom: 5%;
   }
   #hero img{
     border-radius: 16px;
