--- a/src/components/Specials/Specials.css
+++ b/src/components/Specials/Specials.css
@@ -28,7 +28,7 @@
   }
   .specials-container {
     display: flex;
-    gap: 64px
+    gap: 64px;
   }
   .special-card h3 {
     padding: 0px 0px 0px 17px;
